[package]
name = "ilp-settlement-ethereum"
description = "Ethereum L1 Settlement Engine for the Interledger Settlement Architecture"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
hex = "0.3.2"
web3 = "0.19.0"
log = "0.4.19"
tokio = { version = "1.28.2", features = ["full"] }
hyper = "0.14.26"
futures = { version = "0.3", features = ["compat"] }
interledger-service = { git = "https://github.com/tw-sithumyo/interledger-rs", branch = "master" }
interledger-http = { git = "https://github.com/tw-sithumyo/interledger-rs", branch = "master" }
interledger-settlement = { git = "https://github.com/tw-sithumyo/interledger-rs", branch = "master", default-features = false  }
interledger-errors = { git = "https://github.com/tw-sithumyo/interledger-rs", branch = "master", default-features = false  }
ethabi = "18.0.0"
serde = { version = "1.0.164", default-features = false }
serde_json = { version = "1.0.97", default-features = false }
json = "0.11.15"
bytes = "1.4.0"
ring = "0.16.20"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
env_logger = "0.6.2"
uuid = { version = "0.8.2", features = ["serde", "v4"]  }
tokio-retry = "0.3.0"
redis_crate = { package = "redis", version = "0.21.7", features = ["tokio-comp"], optional = true }
http = "0.2"
clap = "2.34.0"
clarity = "1.2.1"
sha3 = "0.8.2"
num-bigint = "0.2.6"
num-traits = "0.2.15"
lazy_static = "1.4.0"
secrecy = { version = "0.6", features = ["serde", "bytes"] }
zeroize = { version = "1.6.0" }
parking_lot = "0.9.0"
config = { version = "0.11.0", features = [ "json", "yaml" ] }
libc = "0.2.146"
tiny-keccak="1.5.0"
secp256k1 = { version = "0.27.0", features = ["recovery"] }
rlp ="0.5.2"
ethereum-types ="0.14.1"
warp = "0.3.5"
async-trait = "0.1.68"
tokio-compat-02 = "0.2.0"


[dev-dependencies]
lazy_static = "1.4"
mockito = "1.1.0"
parking_lot = "0.9.0"
net2 = "0.2.39"
os_type = "2.6.0"
rand = "0.7.3"
interledger = { git = "https://github.com/tw-sithumyo/interledger-rs", branch = "master" }
ilp-node = { git = "https://github.com/tw-sithumyo/interledger-rs", branch = "master" }

[features]
default = ["redis"]
redis = ["redis_crate", "interledger-settlement/redis", "interledger-settlement/backends_common"]
